# images-library-management-

./: CMakeLists.txt  CMakeLists.txt.user.4cc5177  ClickableLabel.hpp  README.md  add_new_descriptor.cpp  add_new_descriptor.hpp  add_new_descriptor.ui  all_files.ps  descriptor.cpp  descriptor.hpp  descriptordetails.cpp  descriptordetails.hpp  descriptordetails.ui  image.cpp  image.hpp  imageproccessing.cpp  imageproccessing.hpp  kernels.hpp  librarymanagement.cpp  librarymanagement.hpp  loginwindow.cpp  loginwindow.hpp  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  user.cpp  user.hpp
